force-app/main/default/objects/ContractContentAdjustment__c/ContractContentAdjustment__c.object-meta.xml
<CustomObject>
    <label>契約内容調整</label>
    <nameField>
        <displayFormat>CCA-{00000000}</displayFormat>
        <label>契約内容調整名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>