force-app/main/default/objects/ContractContentAdjustment__c/fields/ConditionChange__c.field-meta.xml
<CustomField>
    <fullName>ConditionChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>条件変更</label>
    <referenceTo>ConditionChange__c</referenceTo>
    <relationshipLabel>契約内容調整</relationshipLabel>
    <relationshipName>ConditionChange1FJ0</relationshipName>
    <type>Lookup</type>
</CustomField>