force-app/main/default/objects/ContractContentAdjustment__c/fields/ConfirmContentReply__c.field-meta.xml
<CustomField>
    <fullName>ConfirmContentReply__c</fullName>
    <label>確認内容回答</label>
    <type>TextArea</type>
</CustomField>