force-app/main/default/objects/ContractContentAdjustment__c/fields/ConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmDate__c</fullName>
    <label>確認日</label>
    <type>Date</type>
</CustomField>