force-app/main/default/objects/ContractContentAdjustment__c/fields/ConfirmDestination__c.field-meta.xml
<CustomField>
    <fullName>ConfirmDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>確認先</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractContentAdjustmentUserRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>