force-app/main/default/objects/ContractContentAdjustment__c/fields/ConfirmPart__c.field-meta.xml
<CustomField>
    <fullName>ConfirmPart__c</fullName>
    <label>確認箇所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>