force-app/main/default/objects/ContractContentAdjustment__c/fields/CorrespondenceContent__c.field-meta.xml
<CustomField>
    <fullName>CorrespondenceContent__c</fullName>
    <label>対応内容</label>
    <type>TextArea</type>
</CustomField>