force-app/main/default/objects/ContractContentAdjustment__c/fields/CorrespondenceFeasibility__c.field-meta.xml
<CustomField>
    <fullName>CorrespondenceFeasibility__c</fullName>
    <label>対応可否</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>可</fullName>
            </value>
            <value>
                <fullName>不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>