force-app/main/default/objects/ContractContentAdjustment__c/fields/DocumentName__c.field-meta.xml
<CustomField>
    <fullName>DocumentName__c</fullName>
    <label>書類名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>