force-app/main/default/objects/ContractContentAdjustment__c/fields/NewMatter__c.field-meta.xml
<CustomField>
    <fullName>NewMatter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>新規</label>
    <referenceTo>NewMatter__c</referenceTo>
    <relationshipLabel>契約内容調整</relationshipLabel>
    <relationshipName>NewMatterContractContentAdjustment</relationshipName>
    <type>Lookup</type>
</CustomField>