force-app/main/default/objects/ContractContentAdjustment__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>更新</label>
    <referenceTo>Renewal__c</referenceTo>
    <relationshipLabel>契約内容調整</relationshipLabel>
    <relationshipName>RenewalBl95</relationshipName>
    <type>Lookup</type>
</CustomField>