force-app/main/default/objects/ContractContentAdjustment__c/validationRules/ConfirmDateUpdateNonEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>ConfirmDateUpdateNonEditable</fullName>
    <active>true</active>
    <errorConditionFormula>(!(ISBLANK(PRIORVALUE( ConfirmDate__c )))&amp;&amp;ISCHANGED(ConfirmDate__c ))</errorConditionFormula>
    <errorMessage>確認日入力後は編集できません。</errorMessage>
</ValidationRule>