force-app/main/default/objects/ContractContentAdjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NewMatter__c</columns>
    <columns>DocumentName__c</columns>
    <columns>ConfirmPart__c</columns>
    <columns>ConfirmContent__c</columns>
    <columns>ConfirmDate__c</columns>
    <columns>CorrespondenceFeasibility__c</columns>
    <columns>ContractDocumentReflectionNecessity__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>